# CppBuildPack

./: CMakeLists.txt  README.md
.github/workflows/: linux.yml
cmake/: CreateAppImage.cmake
pack/linux/appimage/: AppRun.in
src/: CMakeLists.txt
test/: CMakeLists.txt
